# PPM-Editor

./: CMakeLists.txt  MirrorHorizontal.ppm  Test0.ppm  cs1a (copy).ppm  cs1a.ppm  curseddoubles.ppm  main.cpp  negative.ppm
FinalProject/ImgEditor/Flip/: ppm_ghost.cpp
FinalProject/ImgEditor/Mirror/: ppm_ghost.cpp  ppm_ghost.h
FinalProject/ImgEditor/Mirror/Vertical/: ppm_vertical.cpp  ppm_vertical.h
FinalProject/ImgEditor/Negative/: ppm_negative.cpp  ppm_negative.h
FinalProject/ImgProc/: ppm.cpp  ppm.h
FinalProject/Tools/: swap.cpp  swap.h
